--- a/src/composer.json
+++ b/src/composer.json
@@ -13,7 +13,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel-lang/lang": "~7.0",
+        "laravel-lang/lang": "^12.17",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
