--- a/src/.gitignore
+++ b/src/.gitignore
@@ -5,6 +5,9 @@
 /public/storage
 /storage/*.key
 /storage/pail
+!storage/app/
+!storage/app/public/
+!storage/app/public/**
 /vendor
 .env
 .env.backup
