--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,12 +2,12 @@
 /node_modules
 /public/build
 /public/hot
-/public/storage
-/storage/*.key
-/storage/pail
-!storage/app/
-!storage/app/public/
-!storage/app/public/**
+#/public/storage
+#/storage/*.key
+#/storage/pail
+#/src/storage/*
+!storage/app/public/items/
+!storage/app/public/logo/
 /vendor
 .env
 .env.backup
