--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,10 +2,10 @@
 /node_modules
 /public/build
 /public/hot
-#/public/storage
-#/storage/*.key
-#/storage/pail
-#/src/storage/*
+/public/storage
+/storage/*
+!/storage/app/
+!/storage/app/public/
 !storage/app/public/items/
 !storage/app/public/logo/
 /vendor
