--- a/src/composer.json
+++ b/src/composer.json
@@ -9,9 +9,11 @@
         "php": "^8.2",
         "laravel/fortify": "^1.25",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "stripe/stripe-php": "^17.3"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "laravel-lang/lang": "^12.17",
         "laravel/pail": "^1.1",
