--- a/src/.gitignore
+++ b/src/.gitignore
@@ -8,6 +8,13 @@
 /storage/app/*
 !/storage/app/public/
 /storage/app/public/*
+!/storage/framework/
+!/storage/framework/cache/
+!/storage/framework/cache/data/
+!/storage/framework/sessions/
+!/storage/framework/views/
+!/storage/framework/testing/
+!/storage/logs/
 /vendor
 .env
 .env.backup
